[tool.poetry]
name = "hello-example"
version = "0.1.0"
description = ""
authors = ["54yeying <116985868+54yeying@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hello_example"}]

[tool.poetry.dependencies]
python = "3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
