[tool.poetry]
name = "hello-example"
version = "0.1.0"
description = ""
authors = ["54yeying <116985868+54yeying@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hello_example"}]

[tool.poetry.dependencies]
python = "3.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
yapf = "^0.32.0"
pytype = "^2022.11.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
